# rust-sdks

./: .gitignore
.changeset/: add_more_signaling_tests.md
.github/workflows/: sync-upstream.yml
libwebrtc/src/: rtp_parameters.rs
libwebrtc/src/native/: rtp_parameters.rs
livekit-datatrack/: Cargo.toml
livekit-datatrack/src/: track.rs
livekit-datatrack/src/local/: events.rs  pipeline.rs
livekit-datatrack/src/remote/: events.rs
livekit/src/room/: options.rs
livekit/src/rtc_engine/: peer_transport.rs
webrtc-sys/: Cargo.toml  build.rs
webrtc-sys/lib/x64/: README.md  nvcuvid.def  nvcuvid.lib
webrtc-sys/src/: video_encoder_factory.cpp
webrtc-sys/src/nvidia/: cuda_context.cpp  cuda_context.h  h264_encoder_impl.cpp  h264_encoder_impl.h  h265_encoder_impl.cpp  h265_encoder_impl.h  nvidia_encoder_factory.cpp  nvidia_factory_bridge.cpp  nvidia_factory_bridge.h  win_compat.h
webrtc-sys/src/nvidia/NvCodec/: LICENSE  README.txt
webrtc-sys/src/nvidia/NvCodec/NvCodec/NvEncoder/: NvEncoder.cpp
webrtc-sys/src/nvidia/NvCodec/include/: nvEncodeAPI.h
webrtc-sys/src/nvidia/NvCodec/include/Utils/: Logger.h
